--- a/env.example
+++ b/env.example
@@ -63,6 +63,11 @@ ALLOW_DEMO_LOGIN=false
 # Internal API secret for server-to-server authentication
 # This should be DIFFERENT from NEXTAUTH_SECRET (security best practice)
 
+# NOTE: E2E Playwright test credentials are configured in the
+# "E2E TEST CREDENTIALS (RBAC VALIDATION)" section at the end of this file.
+# NO FALLBACK CREDENTIALS exist - tests fail-fast if credentials are missing.
+# See that section for detailed setup instructions.
+
 # =============================================================================
 # FACILITY MANAGEMENT (FM) FEATURE FLAGS
 # =============================================================================
@@ -151,9 +156,9 @@ KAFKA_GROUP_ID=fixzit-souq-group
 # Tap Payments (Primary - Mada, Apple Pay, Credit Cards, STC Pay)
 # Official Docs: https://developers.tap.company
 # Dashboard: https://dashboard.tap.company
-TAP_SECRET_KEY=sk_test_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-TAP_PUBLIC_KEY=pk_test_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
-TAP_WEBHOOK_SECRET=whsec_XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+TAP_SECRET_KEY=
+TAP_PUBLIC_KEY=
+TAP_WEBHOOK_SECRET=
 TAP_WEBHOOK_MAX_BYTES=64000
 TAP_WEBHOOK_RATE_LIMIT=60
 TAP_WEBHOOK_RATE_WINDOW_MS=60000
@@ -295,9 +300,9 @@ SESSION_REMEMBER_DURATION=2592000
 # =============================================================================
 # PAYMENT GATEWAY (PayTabs - Saudi Arabia)
 # =============================================================================
-PAYTABS_PROFILE_ID=your_profile_id_here
-PAYTABS_SERVER_KEY=your_server_key_here
-PAYTABS_CLIENT_KEY=your_client_key_here
+PAYTABS_PROFILE_ID=
+PAYTABS_SERVER_KEY=
+PAYTABS_CLIENT_KEY=
 PAYTABS_REGION=SAU
 PAYTABS_CURRENCY=SAR
 PAYTABS_BASE_URL=https://secure.paytabs.sa
@@ -371,8 +376,8 @@ SENDGRID_TEMPLATE_PASSWORD_RESET=d-your_password_reset_template_id
 SENDGRID_TEMPLATE_NOTIFICATION=d-your_notification_template_id
 SENDGRID_TEMPLATE_INVOICE=d-your_invoice_template_id
 
-# Legacy Support (backward compatibility)
-FROM_EMAIL=noreply@yourdomain.com
+# NOTE: FROM_EMAIL is defined in the core Email section above (noreply@fixzit.sa)
+# Do not redefine here to avoid conflicts
 
 # Option 2: SMTP (Gmail, Office365, etc.)
 EMAIL_HOST=smtp.gmail.com
@@ -488,6 +493,88 @@ NODE_OPTIONS=--max-old-space-size=8192  # Match VS Code/Next.js 8GB cap; lower o
 # Enable detailed logging in development
 DEBUG=false
 LOG_LEVEL=info               # Options: error, warn, info, verbose, debug
+
+# =============================================================================
+# E2E TEST CREDENTIALS (RBAC VALIDATION)
+# =============================================================================
+# Credentials for E2E tests validating RBAC (Role-Based Access Control).
+#
+# ⚠️  IMPORTANT: NO FALLBACK CREDENTIALS EXIST
+# Tests FAIL-FAST if these are not configured. This is intentional:
+# - RBAC tests MUST use real credentials to validate role-based access
+# - Fake/dummy credentials would mask permission regressions
+# - Fork PRs automatically skip E2E tests (secrets unavailable)
+#
+# SETUP INSTRUCTIONS:
+# 1. Create test users in your database with appropriate roles
+# 2. Configure credentials in .env.local (never commit to git)
+# 3. For CI, configure GitHub Actions Secrets
+#
+# SECURITY: Never commit actual credentials. Use:
+# - .env.local for local testing (already in .gitignore)
+# - GitHub Actions Secrets for CI
+#
+# Create test users in your database with these roles:
+# - FINANCE_OFFICER: TEAM_MEMBER role + subRole: 'FINANCE_OFFICER'
+# - HR_OFFICER: TEAM_MEMBER role + subRole: 'HR_OFFICER'
+# - SUPPORT_AGENT: TEAM_MEMBER role + subRole: 'SUPPORT_AGENT'
+# - OPERATIONS_MANAGER: TEAM_MEMBER role + subRole: 'OPERATIONS_MANAGER'
+# - TEAM_MEMBER: TEAM_MEMBER role with no subRole
+# - ADMIN: ADMIN role
+
+# Finance Officer (access to finance module APIs)
+TEST_FINANCE_OFFICER_EMAIL=
+TEST_FINANCE_OFFICER_PASSWORD=
+TEST_FINANCE_OFFICER_EMPLOYEE=
+
+# HR Officer (access to HR module APIs)
+TEST_HR_OFFICER_EMAIL=
+TEST_HR_OFFICER_PASSWORD=
+TEST_HR_OFFICER_EMPLOYEE=
+
+# Support Agent (access to support/tickets APIs)
+TEST_SUPPORT_AGENT_EMAIL=
+TEST_SUPPORT_AGENT_PASSWORD=
+TEST_SUPPORT_AGENT_EMPLOYEE=
+# REQUIRED for row-level RBAC: MongoDB _id of SUPPORT_AGENT test user
+# Used to verify agent only sees tickets assigned to them (not all org tickets)
+TEST_SUPPORT_AGENT_USER_ID=
+
+# Operations Manager (access to work orders, properties, marketplace APIs)
+TEST_OPERATIONS_MANAGER_EMAIL=
+TEST_OPERATIONS_MANAGER_PASSWORD=
+TEST_OPERATIONS_MANAGER_EMPLOYEE=
+
+# Team Member without sub-role (limited access, used for negative tests)
+TEST_TEAM_MEMBER_EMAIL=
+TEST_TEAM_MEMBER_PASSWORD=
+TEST_TEAM_MEMBER_EMPLOYEE=
+# REQUIRED for row-level RBAC: MongoDB _id of TEAM_MEMBER test user
+# Used to verify member only sees work orders assigned to them (not all org work orders)
+TEST_TEAM_MEMBER_USER_ID=
+
+# Admin user (full access to all modules)
+TEST_ADMIN_EMAIL=
+TEST_ADMIN_PASSWORD=
+# Admin employee number (required for employee-number login test in auth.spec.ts)
+TEST_ADMIN_EMPLOYEE=
+
+# =============================================================================
+# MULTI-TENANCY VALIDATION
+# =============================================================================
+# Required for tenant-scoped E2E tests to verify data isolation
+# Set this to your test organization's MongoDB ObjectId
+# Used by expectAllowedWithBodyCheck() to validate org_id in API responses
+# This catches cross-tenant data leaks that status-only checks miss
+TEST_ORG_ID=
+
+# Optional: Bypass TEST_ORG_ID requirement for local development
+# When running E2E tests locally without TEST_ORG_ID, tests will fail by default
+# Set this to 'true' to acknowledge the skip and continue without tenant validation
+# WARNING: This should NEVER be enabled in CI - it's for local DX only
+# 
+# Used by: auth.spec.ts, subrole-api-access.spec.ts, work-orders-flow.spec.ts, marketplace-flow.spec.ts
+ALLOW_MISSING_TEST_ORG_ID=false
 
 # =============================================================================
 # NOTES
